<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSpeciesLabel"
        style="@style/AppTheme.Text.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_species_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSpecies"
        style="@style/AppTheme.Text.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSpcPopulation"
        app:layout_constraintTop_toTopOf="@+id/tvSpeciesLabel"
        app:layout_constraintBottom_toBottomOf="@+id/tvSpeciesLabel"
        tools:text="Human" />

    <TextView
        android:id="@+id/tvSpcLanguageLabel"
        style="@style/AppTheme.Text.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/character_detail_species_label_margin_top"
        android:text="@string/label_species_language"
        app:layout_constraintStart_toStartOf="@+id/tvSpeciesLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeciesLabel"/>

    <TextView
        android:id="@+id/tvSpcLanguage"
        style="@style/AppTheme.Text.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSpcPopulation"
        app:layout_constraintTop_toTopOf="@+id/tvSpcLanguageLabel"
        app:layout_constraintBottom_toBottomOf="@+id/tvSpcLanguageLabel"
        tools:text="Galactic Basic" />

    <TextView
        android:id="@+id/tvSpcPlanetLabel"
        style="@style/AppTheme.Text.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/character_detail_species_label_margin_top"
        android:text="@string/label_species_planet"
        app:layout_constraintStart_toStartOf="@+id/tvSpcLanguageLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvSpcLanguageLabel"/>

    <TextView
        android:id="@+id/tvSpcPlanet"
        style="@style/AppTheme.Text.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSpcPopulation"
        app:layout_constraintTop_toTopOf="@+id/tvSpcPlanetLabel"
        app:layout_constraintBottom_toBottomOf="@+id/tvSpcPlanetLabel"
        tools:text="Coruscant" />

    <TextView
        android:id="@+id/tvSpcPopulationLabel"
        style="@style/AppTheme.Text.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/character_detail_species_label_margin_top"
        android:text="@string/label_species_population"
        app:layout_constraintStart_toStartOf="@+id/tvSpcPlanetLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvSpcPlanetLabel"/>

    <TextView
        android:id="@+id/tvSpcPopulation"
        style="@style/AppTheme.Text.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/character_detail_species_info_margin_start"
        app:layout_constraintStart_toEndOf="@+id/tvSpcPopulationLabel"
        app:layout_constraintTop_toTopOf="@+id/tvSpcPopulationLabel"
        app:layout_constraintBottom_toBottomOf="@+id/tvSpcPopulationLabel"
        tools:text="1000000000000"/>

</android.support.constraint.ConstraintLayout>